# DrillSergeantHQ

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: gh-pages-paddleball-qlearn-wasm-preview.yml  gh-pages-paddleball-qlearn-wasm.yml
docs/: README.md  status.md  technical-design.md
docs/learning/: README.md
docs/learning/the-book/: README.md
docs/learning/tutorials-by-topic/: README.md  action-space-design.md  adam-optimizer.md  build-pipeline-tooling.md  coop-coep-isolation.md  cpu-fallback-strategy.md  gae-math.md  hot-swapped-weights.md  memory-alignment-layout.md  mlp-backpropagation.md  off-main-thread-rendering.md  opfs-storage.md  parallel-ppo-simulation.md  physics-determinism.md  ppo-gae-loops.md  reward-shaping-potential.md  rollout-orchestration.md  self-play-pool.md  self-play-theory.md  shared-array-buffer-atomics.md  soa-layouts.md  soccer-sim-logic.md  training-metrics.md  training-schedulers.md  validation-mode-cross-checking.md  wasm-threads-rayon.md  webgpu-dedicated-workers.md  wgsl-kernels.md  worker-request-animation-frame.md
examples/: README.md
experiments/: README.md
experiments/paddleball-qlearn-wasm/: .gitignore  EXPERIMENTATION.md  PLAN.md  README.md  TUTORIAL.md  hypothetical-implementation.md  index.html  package-lock.json  package.json  plan.md  scaffold.md
experiments/paddleball-qlearn-wasm/docs/: plan.md  (+2 more)
experiments/paddleball-qlearn-wasm/rust/: Cargo.toml
experiments/paddleball-qlearn-wasm/rust/src/: lib.rs  render.rs  shader.wgsl  wasm_api.rs
(+91 files in other folders)
