[package]
name = "paddleball_qlearn_wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Allowed by repo dependency policy: platform glue.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
] }

wgpu = "23"

anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }

log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"


